# chess_search_algorithms

./: .pre-commit-config.yaml  pyproject.toml
